--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 main{
     width: 100%;
-    background-color: #F1F1F1;
+    background-color: #e1dfdf;
 }
 .head{
     padding-top: 60px;
@@ -34,6 +34,8 @@ justify-content: center;
 width: 800px;
 background-color: white;
 margin-bottom: 30px;
+box-shadow: 6px 6px 5px 6px rgba(140, 140, 140, 0.329);
+
 }
 .box1 img{
     width: 800px;
@@ -77,6 +79,9 @@ margin-bottom: 30px;
 }
 .rightBox1{
     background-color: white;
+    margin-bottom: 10px;
+    box-shadow: 6px 6px 5px 6px rgba(140, 140, 140, 0.342);
+
 }
 .rightBox1 img{
 width: 400px;
@@ -91,15 +96,56 @@ height: 200px;
     font-size: 20px;
     padding: 20px;
 }
+.rightBox2{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-bottom: 20px;
+    box-shadow: 6px 6px 5px 6px rgba(140, 140, 140, 0.329);
+}
 .rightBox2Head{
+width: 390px;
+height: 60px;
+background-color: rgb(216, 215, 217);
+display: flex;
+align-items: center;
+padding-left: 10px;
+}
+.rightBoxMain{
+    height: 64px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgb(213, 211, 211);
+}
+.rightBoxMain img{
+width: 50px;
+height: 50px;
+padding: 0 5px 0 5px;
+}
 
+.rightBoxTags{
+    display: flex;
+    flex-wrap: wrap;
+    height: 80px;
+    background-color: white;
 
+}
+.rightBoxTags span{
+  margin-top: 15px;
+    padding-left: 10px;
 }
 footer{
     margin-top: 50px;
     width: 100%;
-    height: 200px;
+    height: 180px;
     background-color: #616161;
+
+}
+.footerParent{
+    display: flex;
+    gap: 20px;
+    padding: 20px 0 0 20px;
 }
 footer span{
     width: 200px;
@@ -108,8 +154,11 @@ footer span{
     color: white;
 }
 .footerBottom1{
-    width: 200px;
-    height: 80px;
+    width: 80px;
+    height: 40px;
     background-color: black;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
